# Learning_Resource_tracker

./: .env  .gitignore  Procfile  claude.md  main.py  pyproject.toml  requirements.txt
app/: app.py  database.py  main.py  models.py  schemas.py  testapi.py
backend/: app.py  auth.py  database.py  main.py  models.py  schemas.py
frontend/: app.js  index.html  style.css
