[project]
name = "learning-resource-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "cryptography>=46.0.5",
    "fastapi>=0.135.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
    "youtube-transcript-api>=1.2.4",
]
